# CogniTeam

./: .env.example  .gitignore  LICENSE  README.md  antigravity_complete_system_7_domains.json  cogniteam_archetypes.yaml  main.py  pyproject.toml
.github/workflows/: test.yml
cogniteam/: __init__.py
cogniteam/agents/: __init__.py  debugger_agent.py  developer_agent.py  planner_agent.py  ui_designer_agent.py
cogniteam/core/: __init__.py  context.py  orchestrator.py  planner.py  session.py
cogniteam/memory/: __init__.py
cogniteam/memory/fastslow/: __init__.py  fastslow.py
cogniteam/memory/graphrag/: __init__.py  graphrag.py
cogniteam/memory/hmem/: __init__.py  hmem.py
cogniteam/memory/matm/: __init__.py  matm.py
cogniteam/memory/skills/: __init__.py  skills.py
cogniteam/scoping/: __init__.py  agent.py  loader.py  manifest.py
cogniteam/tools/: __init__.py  base.py
cogniteam/tools/filesystem/: __init__.py  operations.py
cogniteam/tools/git/: __init__.py  operations.py
cogniteam/tools/integrations/: __init__.py  api.py  cocoguide.py  pdf.py  text_artifact.py  tts.py
cogniteam/tools/rag/: __init__.py  engine.py
cogniteam/tools/scripting/: __init__.py  proposals.py  terminal.py
cogniteam/tools/ui/: __init__.py  analyze.py  combine.py  css.py  fix.py  html.py  js.py  validate.py
cogniteam/tools/utils/: llm.py  ratelimit.py  retry.py
cogniteam/tools/web/: _brave.py  _cse.py  browse.py  extract.py  search.py
cogniteam/utils/: io.py  security.py
cogniteam/world_model/: cogniteam_archetypes.yaml  cogniteam_integration.py  deterministic_cage.py  world_model_layer.py  yaml_loader.py
docs/: domain_consolidation.md
experiments/: Scripts de Adaptacion Cogniteam.docx  crear_proyecto_godot.py  game_description.txt  juego.html  proyecto_godot.py  snake_game.html  ventas.csv
scripts/: run_memory_test.py
tests/: conftest.py  test_fastslow.py  test_graphrag.py  test_hmem.py  test_integration.py  test_matm.py  test_scoping.py  test_skills.py
