[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "cogniteam"
version = "1.0.0"
description = "Sistema multi-agente con memoria híbrida H-MEM, GraphRAG, MATM y aprendizaje continuo"
requires-python = ">=3.11"
dependencies = [
    "groq>=1.5.0",
    "httpx>=0.28.0",
    "networkx>=3.0",
    "numpy>=2.0.0",
    "ollama>=0.4.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
ml = [
    "chromadb>=0.5.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
]
web = [
    "beautifulsoup4>=4.12.0",
]
pdf = [
    "reportlab>=4.2.0",
]
tts = [
    "pyttsx3>=2.90",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "litellm>=1.60.0",
]

# Legacy extras kept for backwards compatibility
all = [
    "cogniteam[ml,web,pdf,tts,dev]",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
